2006-06-05  Sven Neumann  <sven@gimp.org>

	* app/gui/splash.c: added back support for animated splashes but
	continue to use the optimized code for static splash images.

2006-06-05  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-user-install.[ch]
	* app/app_procs.c: always migrate old user settings during user
	installation.

	* app/dialogs/user-install-dialog.[ch]: don't ask questions and
	only show the dialog in case of an error.

2006-06-05  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangletool.c: formatting.

2006-06-04  Seth Burgess <sjburges@gimp.org>
	
	* plug-ins/common/png.c: fixed file_png_set_defaults; wrong # of
	  return values, missing "set" if/else set, wrong set param count,
	  and off by one error in the parameter indexes.  Thanks to Kevin
	  on helping track these down.

2006-06-04  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimprectangletool.c:
	* app/tools/gimpnewrectselecttool.c: enable canceling of 
	current action by holding down mouse button 3.

2006-06-04  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpscaletool.c (gimp_scale_tool_size_notify):
	strcmp() the property name, so we don't change the size on random
	property changes. Fixes the tool reverting to the previous
	width/height on each new transform (destroying the previous size
	box causes it to emit stuff like "notify::visible").

	(gimp_scale_tool_prepare): additionally, disconnect from the size
	box before destroying it (paranoia).

2006-06-04  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimpnewrectselectoptions.c: turn highlighting off by
	default.
	
2006-06-04  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimprectangletool.c (gimp_rectangle_tool_draw):
	draw anchors in corners; clean up code a bit.

	* app/tools/gimpnewrectselecttool.c: actually remove some code
	previously commented out.
	
2006-06-04  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimppropwidgets.c